# bank-reviews-dw

./: README.md  main.py  pyproject.toml
scripts/: master_bank_reviews.csv  review_scraper.py  scraper.ipynb
