[project]
name = "bank-reviews-dw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "sqlalchemy>=2.0.48",
    "webdriver-manager>=4.0.2",
]
